# spive2d

./: .gitignore  CHANGELOG.md  LICENSE  README.ja.md  README.md  README.zh-cn.md  bunfig.toml  index.html  jsconfig.json  package.json  tauri.conf.json  vite.config.js  vite.config.ts  vitest.config.js
.github/workflows/: release.yaml  release.yml
public/lib/: spine-webgl-3.6.js  spine-webgl-3.7.js  spine-webgl-3.8.js
py/: copy_by_list.py  extclean.py  pma2sta.py  resize.py  sta2pma.py
src/: App.tsx  Dialog.tsx  Filter.tsx  Live2dSetting.tsx  Progress.tsx  Sidebar.tsx  SpineSettings.tsx  Spinner.tsx  app.html  global.css  global.d.ts  index.html  jotai-extended.ts  keyboard.ts  lib.rs  main.tsx  model-transform.ts  mouse.ts  path.ts  prelude.ts  store.ts  style.css  utils.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/css/: style.css
src/js/: events.js  export.js  live2d-loader.js  main.js  spine-loader.js  ui.js
src/lib/: appState.svelte.js  atlasUtils.js  exportQueue.svelte.js  exportUtils.js  exporter.js  exporter.worker.js  fileManager.js  i18n.svelte.js  index.min.js  inputAction.js  live2dcubismframework.min.js  notificationStore.svelte.js  pngEncoder.worker.js  preferences.js  rendererStore.js  rendererStore.svelte.js  settings.js  shortcutKeys.js  spine-webgl-3.6.js  spine-webgl-3.7.js  spine-webgl-3.8.js  spine-webgl-4.0.js  spine-webgl-4.1.js  spine-webgl-4.2.js  utils.js  windowManager.js  workerPolyfills.js
src/locales/: en.json  zh.json
src/routes/: +layout.svelte  +page.svelte  AnimationController.svelte  ExportQueue.svelte  Notification.svelte  PreferencesDialog.svelte  (+2 more)
test/: run-all.js
(+41 files in other folders)
