[package]
name = "spive2d"
version = "0.1.38"
description = ""
authors = ["lmmtrr"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "spive2d_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
zip = "2"
sevenz-rust2 = "0"
unityfs = "0"

[profile.dev]
opt-level = 0
overflow-checks = true

[profile.dev.package.unityfs]
opt-level = 3
[profile.dev.package.lz4_flex]
opt-level = 3
[profile.dev.package.lzma-rs]
opt-level = 3
[profile.dev.package.sevenz-rust2]
opt-level = 3
[profile.dev.package.lzma-rust2]
opt-level = 3
[profile.dev.package.zip]
opt-level = 3
[profile.dev.package.texture2ddecoder]
opt-level = 3
debug-assertions = false
overflow-checks = false
[profile.dev.package.image]
opt-level = 3
[profile.dev.package.flate2]
opt-level = 3
[profile.dev.package.miniz_oxide]
opt-level = 3
[profile.dev.package.brotli-decompressor]
opt-level = 3
[profile.dev.package.png]
opt-level = 3
[profile.dev.package.fdeflate]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
